// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should collect errors from all codecs 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "object",
    "message": "Expected an object, received null",
    "path": [],
    "received": "null",
  },
  {
    "code": "invalid_type",
    "expected": "object",
    "message": "Expected an object, received null",
    "path": [],
    "received": "null",
  },
]
`;

exports[`should collect errors from all codecs 2`] = `
[
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected a number, received undefined",
    "path": [
      "a",
    ],
    "received": "undefined",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected a number, received undefined",
    "path": [
      "b",
    ],
    "received": "undefined",
  },
]
`;

exports[`should collect errors from all codecs 3`] = `
[
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected a number, received a string",
    "path": [
      "a",
    ],
    "received": "string",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected a number, received a string",
    "path": [
      "b",
    ],
    "received": "string",
  },
]
`;

exports[`should work with complex codecs 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "string",
    "message": "Expected a string, received a number",
    "path": [
      "c",
    ],
    "received": "number",
  },
]
`;

exports[`should work with non-object types 1`] = `
[
  {
    "code": "invalid_union",
    "errors": [
      {
        "code": "invalid_type",
        "expected": "number",
        "message": "Expected a number, received a boolean",
        "path": [],
        "received": "boolean",
      },
      {
        "code": "invalid_type",
        "expected": "string",
        "message": "Expected a string, received a boolean",
        "path": [],
        "received": "boolean",
      },
    ],
    "message": "Invalid union",
    "path": [],
  },
]
`;

exports[`should work with non-object types 2`] = `
[
  {
    "code": "invalid_union",
    "errors": [
      {
        "code": "invalid_type",
        "expected": "boolean",
        "message": "Expected a boolean, received a string",
        "path": [],
        "received": "string",
      },
      {
        "code": "invalid_type",
        "expected": "number",
        "message": "Expected a number, received a string",
        "path": [],
        "received": "string",
      },
    ],
    "message": "Invalid union",
    "path": [],
  },
]
`;
